fixed issues with horizontal scrolling and transformations

--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@
 }
 
 html {
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 
@@ -94,7 +95,7 @@ header {
   flex-direction: column;
   justify-content: center;
   height: 100vh;
-  position: relative;
+  width: 100%;
 }
 
 nav {
@@ -139,18 +140,22 @@ nav ul li a:active {
   font-size: 1.8rem;
 }
 
-.cta {
+#cta {
   width: fit-content;
   align-self: center;
   margin: 0;
-  transition: transform 0.3s;
+  -webkit-transition: transform 0.25s; 
+  transition: transform 0.25s;
+  z-index: 9;
 }
 
-.cta:hover {
+#cta:hover {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
-.cta:active {
+#cta:active {
+  -webkit-transform: scale(1.1);
   transform: scale(0.9);
 }
 
@@ -266,14 +271,17 @@ nav ul li a:active {
 #view-button {
   grid-column: 1/-1;
   margin: 0 auto;
-  transition: transform 0.3s;
+  -webkit-transition: transform 0.25s;
+  transition: transform 0.25s;
 }
 
 #view-button:hover {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
 #view-button:active {
+  -webkit-transform: scale(0.9);
   transform: scale(0.9);
 }
 
@@ -295,25 +303,29 @@ nav ul li a:active {
   padding-top: 1.5em;
 }
 
-.social {
+#social {
   box-sizing: border-box;
   display: flex;
   justify-content: center;
 }
 
-.social a {
+#social a {
+  -webkit-transition: transform 0.25s;
   transition: transform 0.3s;
 }
 
-.social a:hover {
+#social a:hover {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
+
 }
 
-.social a:active {
+#social a:active {
+  -webkit-transform: scale(0.9);
   transform: scale(0.9);
 }
 
-.social a:first-child {
+#social a:first-child {
   margin-left: 0;
 }
 
@@ -360,3 +372,4 @@ nav ul li a:active {
     align-self: center;
   }
 }
+
